--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
                             <version>1.1.0</version>
                         </dependency>
                     </dependencies>
+
+
+ 
+
+
                     <configuration>
                         <configLocation>com/github/ngeor/checkstyle.xml</configLocation>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
@@ -58,6 +63,24 @@
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.1</version>
             </plugin>
+
+
+
+            <!-- NEW  lpomared 06.11.19-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.lpcasa.jenkins.App</mainClass>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <!-- END  lpomared 06.11.19-->   
+
         </plugins>
     </build>
     <reporting>
